--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
       <!-- <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025.</strong></li> -->
-      <li>02/2026, one paper accepted at IEEE Trans. on Sensor Networks, congratulations.</li>
+      <li>02/2026, one paper accepted at ACM Trans. on Sensor Networks, congratulations.</li>
       <li>01/2026, received two Bold Challenges and AIIM Seed Networking Awards for smart manufacturing, thanks UM.</li>
       <li>01/2026, one paper accepted at IEEE ICC 2026, congratulations.</li>
       <li>01/2026, invited to serve as TPC member of IEEE INFOCOM DeepWireless 2026.</li>
@@ -352,8 +352,6 @@
         <br>
         <em>IEEE Transactions on Dependable and Secure Computing</em> 2025 | <a style="color: #447ec9" href="">paper</a> 
       </p>
-
-
 
 
       <p>
