--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <li>01/2026, one paper accepted at Ubicomp 2026, congratulations.</li> 
       <li>01/2026, one paper accepted at IEEE Trans. on Dependable and Secure Computing, congratulations.</li>
       
-      
+      <li class="more-news" style="display:none;">12/2025, invited to serve as TPC member of IEEE ICDCS 2026.</li>
       <li class="more-news" style="display:none;">12/2025, invited to serve as TPC member of IEEE ICDCS 2026.</li>
       <li class="more-news" style="display:none;">12/2025, one paper accepted at IEEE Trans. on Mobile Computing, congratulations.</li>
       <li class="more-news" style="display:none;">12/2025, received FRMG grant for indoor robot self-localization, thanks UM-Dearborn.</li>
@@ -350,7 +350,7 @@
         <br>
         Jinxue Zhao, Xinyu Lei, Hongyu Huang, Nankun Mu, Chao Chen, and <strong>Xiao Zhang</strong>
         <br>
-        <em>IEEE Transactions on Dependable and Secure Computing</em> 2025 | <a style="color: #447ec9" href="">paper</a> 
+        <em>IEEE Transactions on Dependable and Secure Computing</em> 2026 | <a style="color: #447ec9" href="">paper</a> 
       </p>
 
 
