--- a/index.html
+++ b/index.html
@@ -541,6 +541,8 @@
             Selase Doku 
             <br> 
             Rathikadevi Mani 
+            <br> 
+            Lyall Sathishkumar
             </p>
 
           <p>
@@ -555,6 +557,10 @@
             Zubair Shareef （NSF STEM Scholar）
             <br> 
             Zhalgas Tileumuratin
+            <br> 
+            Pedro Paiva
+            <br> 
+            Nitin Madhu
             </p>
 
 
@@ -579,6 +585,10 @@
             Nishaant Madhankumar
             <br> 
             Rohit Raval 
+            <br> 
+            Saravana Srinivasan 
+            <br> 
+            Aditi Dharmadhikari 
             </p>
 
     </div>
@@ -591,6 +601,7 @@
     <h2>Awards</h2>
     <ul id="awards-list">
       <!-- <li><strong></strong></li> -->
+      <li> 2026, SURE Program, UM-Dearborn</li>
       <li> 2026, Bold Challenges and AIIM Seed Networking Award, UM</li>
       <li> 2025, FRMG Grant, UM-Dearborn</li>
       <li> 2025, RAG Grant, UM-Dearborn</li>
@@ -598,9 +609,10 @@
       <li> 2025, Best Paper Award, IEEE DSC</li>
       <li> 2025, Best Paper Award, IEEE MASS</li>
       <li> 2025, IHP Research and Engagement Grant, UM</li>
-      <li> 2025, OE Review Grant, UM-Dearborn</li>
+      
 
       <!-- <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li> -->
+      <li class="more-awards" style="display:none;">2025, OE Review Grant, UM-Dearborn</li>
       <li class="more-awards" style="display:none;">2025, OE Creation Grant, UM-Dearborn</li>
       <li class="more-awards" style="display:none;">2025, Creative Teaching Fund, UM-Dearborn</li>
       <li class="more-awards" style="display:none;">2025, SURE Program, UM-Dearborn</li>
