--- a/index.html
+++ b/index.html
@@ -95,16 +95,18 @@
    <h2>News</h2>
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
-      <!-- <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025.</strong></li> -->
+      <li>02/2026, Christian Nwobu received SURE scholarship and MSGC grant (NASA) for his VLC research, congratulations.</li> 
+      <li>02/2026, one paper about contactless battery sensing accepted at Sensors, congratulations.</li>
       <li>02/2026, one paper accepted at ACM Trans. on Sensor Networks, congratulations.</li>
       <li>01/2026, received two Bold Challenges and AIIM Seed Networking Awards for smart manufacturing, thanks UM.</li>
       <li>01/2026, one paper accepted at IEEE ICC 2026, congratulations.</li>
       <li>01/2026, invited to serve as TPC member of IEEE INFOCOM DeepWireless 2026.</li>
       <li>01/2026, partnered with LAHC on K-12 STEM outreach.</li>
       <li>01/2026, invited to give an AI-related speech at the College of Business, UM-Dearborn.</li> 
-      <li>01/2026, one paper accepted at Ubicomp 2026, congratulations.</li> 
-      <li>01/2026, one paper accepted at IEEE Trans. on Dependable and Secure Computing, congratulations.</li>
       
+      
+      <li class="more-news" style="display:none;">01/2026, one paper accepted at Ubicomp 2026, congratulations.</li>
+      <li class="more-news" style="display:none;">01/2026, one paper accepted at IEEE Trans. on Dependable and Secure Computing, congratulations.</li>
       <li class="more-news" style="display:none;">12/2025, invited to serve as TPC member of IEEE ICDCS 2026.</li>
       <li class="more-news" style="display:none;">12/2025, one paper accepted at IEEE Trans. on Mobile Computing, congratulations.</li>
       <li class="more-news" style="display:none;">12/2025, received FRMG grant for indoor robot self-localization, thanks UM-Dearborn.</li>
@@ -188,6 +190,15 @@
         </p>
 
       <p>
+        <li><strong>SoilNutri: A Passive Metasurface-based, Low-cost System for Soil Moisture and Nitrogen Monitoring</strong>
+        <br>
+        Juexing Wang, Binbin Xie, Yimeng Liu, Minhao Cui, <strong>Xiao Zhang</strong>, Guangjing Wang, Ke Sun, Zhichao Cao, Huacheng Zeng, Qingxu Jin, Younsuk Dong, Hui Li, Jie Xiong, Tianxing Li
+        <br>
+        <em>Ubicomp</em> 2026 | <a style="color: #447ec9" href="">paper</a> 
+        </p>
+
+
+      <p>
         <li><strong>Dissecting Privacy-Exposing Identifiers in 5G/4G Networks</strong>
         <br>
         Munshi Saifuzzaman, Ke Xie, Tian Xie, <strong>Xiao Zhang</strong>, and Xinyu Lei          
@@ -260,7 +271,6 @@
         <br>
         <em>Ubicomp</em> 2023 | <a style="color: #447ec9" href="data/juexing-ubicomp23.pdf">paper</a> 
         </p>
-
 
 
       <p>
@@ -337,6 +347,14 @@
     <ol>
 
       <p>
+        <li><strong>Contactless Battery Sensing: A Survey</strong>
+        <br>
+        Saravana Srinivasan^, Pedro Paiva^, Aditi Dharmadhikari^, Lyall Sathishkumar^, Christian Nwobu^, Ningyue Mao, Guilherme Hollweg, Xuan Zhou, <strong>Xiao Zhang</strong>        
+        <br>
+        <em>Sensors</em> 2026 | <a style="color: #447ec9" href="">paper</a> 
+      </p>
+
+      <p>
         <li><strong>RainbowRow: Exploiting 2D Rolling Blocks for Improved LED-Camera Communication</strong>
         <br>
         <strong>Xiao Zhang</strong>, Griffin Klevering*, James Mariani, Kanishka P Wijewardena*, Li Xiao, and Matt W. Mutka
@@ -404,7 +422,7 @@
         <br>
         Juexing Wang, <strong>Xiao Zhang</strong>, Li Xiao, and Tianxing Li
         <br>
-        <em>MDPI Network</em> 2023 | <a style="color: #447ec9" href="data/network-03-00021.pdf">paper</a> 
+        <em>Network</em> 2023 | <a style="color: #447ec9" href="data/network-03-00021.pdf">paper</a> 
       </p>
     </ol>
 
