--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
    <h2>News</h2>
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
-      <li>02/2026, Christian Nwobu received SURE scholarship and MSGC grant (NASA) for his VLC research, congratulations.</li> 
+      <li>02/2026, Christian received SURE and MSGC grant (NASA) for his VLC research, congratulations.</li> 
       <li>02/2026, one paper about contactless battery sensing accepted at Sensors, congratulations.</li>
       <li>02/2026, one paper accepted at ACM Trans. on Sensor Networks, congratulations.</li>
       <li>01/2026, received two Bold Challenges and AIIM Seed Networking Awards for smart manufacturing, thanks UM.</li>
