--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
       <p>
         <li><strong>Contactless Battery Sensing: A Survey</strong>
         <br>
-        Saravana Srinivasan^, Pedro Paiva^, Aditi Dharmadhikari^, Lyall Sathishkumar^, Christian Nwobu^, Ningyue Mao, Guilherme Hollweg, Xuan Zhou, <strong>Xiao Zhang</strong>        
+        Saravana Srinivasan*, Pedro Paiva*, Aditi Dharmadhikari*, Lyall Sathishkumar*, Christian Nwobu*, Ningyue Mao, Guilherme Hollweg, Xuan Zhou, <strong>Xiao Zhang</strong>        
         <br>
         <em>Sensors</em> 2026 | <a style="color: #447ec9" href="">paper</a> 
       </p>
