--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
    <h2>News</h2>
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
-      <li>02/2026, Christian received SURE and MSGC grant (NASA) for his VLC research, congratulations.</li> 
+      <li>02/2026, Christian received SURE and UGR (MSGC-NASA) grants for VLC research, congratulations.</li> 
       <li>02/2026, one paper about contactless battery sensing accepted at Sensors, congratulations.</li>
       <li>02/2026, one paper accepted at ACM Trans. on Sensor Networks, congratulations.</li>
       <li>01/2026, received two Bold Challenges and AIIM Seed Networking Awards for smart manufacturing, thanks UM.</li>
@@ -618,6 +618,7 @@
     <h2>Awards</h2>
     <ul id="awards-list">
       <!-- <li><strong></strong></li> -->
+      <li> 2026, Undergraduate Research Grant, MSGC/li>
       <li> 2026, SURE Program, UM-Dearborn</li>
       <li> 2026, Bold Challenges and AIIM Seed Networking Award, UM</li>
       <li> 2025, FRMG Grant, UM-Dearborn</li>
@@ -625,10 +626,11 @@
       <li> 2025, Academic Innovation Fund, UM</li>
       <li> 2025, Best Paper Award, IEEE DSC</li>
       <li> 2025, Best Paper Award, IEEE MASS</li>
-      <li> 2025, IHP Research and Engagement Grant, UM</li>
+      
       
 
       <!-- <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li> -->
+      <li class="more-awards" style="display:none;">2025, IHP Research and Engagement Grant, UM</li>
       <li class="more-awards" style="display:none;">2025, OE Review Grant, UM-Dearborn</li>
       <li class="more-awards" style="display:none;">2025, OE Creation Grant, UM-Dearborn</li>
       <li class="more-awards" style="display:none;">2025, Creative Teaching Fund, UM-Dearborn</li>
