--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
     <h2>Awards</h2>
     <ul id="awards-list">
       <!-- <li><strong></strong></li> -->
-      <li> 2026, Undergraduate Research Grant, MSGC-NASA/li>
+      <li> 2026, Undergraduate Research Grant, MSGC-NASA</li>
       <li> 2026, SURE Program, UM-Dearborn</li>
       <li> 2026, Bold Challenges and AIIM Seed Networking Award, UM</li>
       <li> 2025, FRMG Grant, UM-Dearborn</li>
