--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <p>
         <li><strong>Engagement in Practice: Historical Investigation and Methodology Development of University STEM Outreach for K-12 Collaboration and Next-Generation Engineers</strong>
         <br>
-        Christian Nwobu, Zhalgas Tileumuratin, Hannah Zmuda, Zheng Song, and <strong>Xiao Zhang</strong>        
+        Christian Nwobu*, Zhalgas Tileumuratin*, Hannah Zmuda, Zheng Song, and <strong>Xiao Zhang</strong>        
         <br>
         <em>ASEE</em> 2026 | <a style="color: #447ec9" href="">paper</a> 
         </p>
